--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.data.mongodb.uri=mongodb+srv://sajindu:saji1234@cluster0.bx77a.mongodb.net/
 spring.data.mongodb.database=codefest
+spring.servlet.multipart.max-file-size=1000MB
+spring.servlet.multipart.max-request-size=1000MB
