--- a/front_end/package.json
+++ b/front_end/package.json
@@ -17,10 +17,17 @@
     "@mui/material": "^5.14.7",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "mdb-react-ui-kit": "^6.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
+    "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
