--- a/front_end/package.json
+++ b/front_end/package.json
@@ -14,7 +14,7 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.7",
+    "@mui/material": "^5.14.8",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "mdb-react-ui-kit": "^6.2.0",
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
