--- a/front_end/package.json
+++ b/front_end/package.json
@@ -13,8 +13,9 @@
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.8",
+    "@mui/material": "^5.14.9",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "mdb-react-ui-kit": "^6.2.0",
